# locz

./: .gitignore  .replit  Cargo.toml  Makefile  index.js  replit.nix
client/: error_logger.js  index.html  main.js
client/locz/: loczwasm.js  loczwasm_bg.wasm
client/style/: debugpane.css  gamepane.css  main.css  startmenu.css
loczlib/: Cargo.toml  build.rs
loczlib/src/: assets.rs  lib.rs
loczlib/src/renderer/: fixedpoint.rs  line.rs  mod.rs  rasterizer.rs
loczwasm/: Cargo.toml
loczwasm/src/: error_logger.rs  lib.rs
toolchain/wasm_bindgen/: wasm2es6js
