[workspace]
members = [
	"loczwasm",
	"loczlib"
]

[profile.release]
panic = "abort"
opt-level = 3
overflow-checks = false
debug-assertions = false
codegen-units = 8
lto = "thin"
debug = false

[profile.maxopt]
inherits = "release"
incremental = false
codegen-units = 1
lto = "fat"
strip = "debuginfo"